testsuite/tests/modifiers/should_fail/ModifiersForbiddenHere.hs
{-# LANGUAGE Modifiers #-}
module ModifiersForbiddenHere where

%()
type family T a
