testsuite/tests/modifiers/should_fail/ModifiersForbiddenHere.stderr
ModifiersForbiddenHere.hs:4:1: error: [GHC-61252]
    Illegal use of modifier syntax

